<resources>
    <string name="app_name">FinalProject</string>
    <string name="facts">Facts</string>
    <string name="title">FinalProject</string>
    <string name="factsButton">FinalProject</string>
    <string name="picButton">FinalProject</string>
    <string name="rateButton">FinalProject</string>
    <string name="Cat_Facts">Cat Facts</string>
    <string name="Show_me_Cats">Show me Cats</string>
    <string name="Rate_my_Cat">Rate my Cat</string>
    <string name="back">&lt; Home</string>
    <string name="logocat">logo</string>
    <string name="catlogo">logo</string>
    <string name="give">Give me Another</string>
    <string name="show">Show me Another</string>
    <string name="temp">TEMP</string>
    <string name="cat">cat</string>
    <string name="upload">Upload</string>
    <string name="rate">Rate!</string>
    <string name="clear">Clear</string>
    <string name="none">""</string>
    <string name="dog">dog</string>
    <string name="current_image">Current Image</string>
</resources>
